@@ -16,12 +16,20 @@ void getgroup (vector<word>& rel, vector<word>& gen_H);
 int
 main (void)
 {
+  cout << "\nThis program uses the HLT version of the Todd-Coxeter procedure\n"
+       << "to compute the index in a 2-generator group G of a subgroup H.\n"
+       << "You will be prompted to enter the defining relators of G and\n"
+       << "the generators of H.  Use a,b for the generators and A,B for\n"
+       << "their inverses.\n\n";
   vector<word> rel;
   vector<word> gen_H;
   getgroup (rel, gen_H);
   CosetTable C (rel, gen_H);
   C.hlt ();
-  C.debug_print ();
+  cout << "\nThe index of H in G is " << C.get_nlive ()
+       << ".\nThere were " << C.get_size () + 1 << " cosets defined.\n\n"
+       << "Coset table:\n\n";
+  C.print ();
   return 0;
 }
 
